# market

./: .gitignore  README.md  pyproject.toml
BackEnd/Imarket/orders/: urls.py
BackEnd/Imarket/products/: views.py
BackEnd/Imarket/shop/: views.py
BackEnd/Imarket/users/: serializers.py  urls.py  views.py
